--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watch Movies Page</title>
+    <link rel="icon" href="./assets/img/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/index.css">
@@ -17,13 +18,19 @@
             </div>
             <div class="menu-header">
                 <div class="menu-header__item">
-                    <a href="">Tất cả</a>
+                    <a href="">Trang chủ</a>
                 </div>
                 <div class="menu-header__item">
                     <a href="">Phim lẻ</a>
                 </div>
                 <div class="menu-header__item">
                     <a href="">Phim bộ</a>
+                </div>
+                <div class="menu-header__item">
+                    <a href="">Hoạt hình</a>
+                </div>
+                <div class="menu-header__item">
+                    <a href="">Tv Shows</a>
                 </div>
             </div>
             <div class="search">
