--- a/detailMovie-page.html
+++ b/detailMovie-page.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PHOFLIX | PHOHOCCODE</title>
+    <title>Detail Movies</title>
     <link rel="icon" href="./assets/img/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/detailMovie.css">
     <link rel="stylesheet" href="./assets/icon/fontawesome.com/releases/v6.4.2/css/all.css">
 </head>
 <body>
@@ -40,23 +41,16 @@
                 </button>
             </div>
         </header>
+
         <div class="content">
-            <div class="slider-container">
-                <button class="prev">
-                    <i class="fa-light fa-angle-left"></i>
-                </button>
-                <div class="slider-inner"></div>
-                <button class="next">
-                    <i class="fa-light fa-angle-right"></i>
-                </button>
-            </div>
-            
-            <section class="feature-film"></section>
-            <section class="television-seris"></section>
-            <section class="cartoon"></section>
-            <section class="tv-shows"></section>
+            <section class="all-movie">
+
+            </section>
+
+            <div class="paginations"></div>
         </div>
     </div>
-    <script defer type="module" src="./src/js/index.js"></script>
+
+    <script type="module" src="./src/js/detailMovie.js"></script>
 </body>
 </html>
