--- a/infoMovie-page.html
+++ b/infoMovie-page.html
@@ -3,9 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Info Movies</title>
+    <link rel="icon" href="./assets/img/logo.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/infoMovie.css">
+    <link rel="stylesheet" href="./assets/icon/fontawesome.com/releases/v6.4.2/css/all.css">
 </head>
 <body>
-    
+    <div class="main-page">
+        <header>
+            <div class="logo">
+                <a href="./index.html">PHOFLIX</a>
+            </div>
+            <div class="menu-header">
+                <div class="menu-header__item">
+                    <a href="./index.html">Trang chủ</a>
+                </div>
+                <div class="menu-header__item">
+                    <a href="">Phim lẻ</a>
+                </div>
+                <div class="menu-header__item">
+                    <a href="">Phim bộ</a>
+                </div>
+                <div class="menu-header__item">
+                    <a href="">Hoạt hình</a>
+                </div>
+                <div class="menu-header__item">
+                    <a href="">Tv Shows</a>
+                </div>
+            </div>
+            <div class="search">
+                <input type="text" placeholder="Tìm kiếm...">
+                <button>
+                    <i class="fa-light fa-magnifying-glass"></i>
+                </button>
+            </div>
+        </header>
+
+        <div class="content">
+            <div class="background-movie">
+                <!-- <figure>
+                    <img src="./assets/img/logo.jpg" alt="">
+                </figure>
+
+                <div class="background-movie__info">
+                    <h3>tan hau vong</h3>
+                    <div class="info-bottom">
+                        <a href="./watchMovie-page.html" data-linkEmbed="">
+                            <i class="fa-solid fa-play"></i>
+                            Xem ngay
+                        </a>
+                        <span class="quality">HD</span>
+                        <span class="year">2015</span>
+                        <span class="episode_current">540</span>
+                    </div>
+                </div> -->
+            </div>
+            
+            <div class="information-movie">
+                <!-- <p class="infomation-movie__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, praesentium laudantium ad delectus corporis quibusdam tempore architecto expedita eveniet saepe obcaecati harum deleniti ducimus exercitationem tempora perspiciatis fuga. Tempore, quaerat.</p>
+                <span class="infomation-movie__country">trung quoc</span>
+                <span class="infomation-movie__time">103 phut</span>
+                <ul class="infomation-movie__actor">
+                    <h4>test</h4>
+                    <li>nha quoc viet</li>
+
+                </ul>
+                <ul class="infomation-movie__category">
+                    <h4>test</h4>
+                    <li>hanhh dong</li>
+                </ul> -->
+            </div>
+        </div>
+    </div>
+    <script defer type="module" src="./src/js/infoMovie.js"></script>
 </body>
 </html>
