update search movie and  ...

--- a/detailMovie-page.html
+++ b/detailMovie-page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/index.css">
-    <link rel="stylesheet" href="./assets/css/detailMovie.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/icon/fontawesome.com/releases/v6.4.2/css/all.css">
 </head>
 <body>
@@ -22,16 +22,10 @@
                     <a href="./index.html">Trang chủ</a>
                 </div>
                 <div class="menu-header__item">
-                    <a href="">Phim lẻ</a>
+                    <a href="./detailMovie-page.html" data-type="totalPage-featureFlim" data-api="https://phimapi.com/v1/api/danh-sach/phim-le">Phim lẻ</a>
                 </div>
                 <div class="menu-header__item">
-                    <a href="">Phim bộ</a>
-                </div>
-                <div class="menu-header__item">
-                    <a href="">Hoạt hình</a>
-                </div>
-                <div class="menu-header__item">
-                    <a href="">Tv Shows</a>
+                    <a href="./detailMovie-page.html" data-type="totalPage-televisionSeries" data-api="https://phimapi.com/v1/api/danh-sach/phim-bo">Phim bộ</a>
                 </div>
             </div>
             <div class="search">
@@ -40,6 +34,7 @@
                     <i class="fa-light fa-magnifying-glass"></i>
                 </button>
             </div>
+        </header>
         </header>
 
         <div class="content">
