--- a/watchMovie-page.html
+++ b/watchMovie-page.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/watchMovie.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/icon/fontawesome.com/releases/v6.4.2/css/all.css">
 </head>
 <body>
@@ -21,16 +22,10 @@
                     <a href="./index.html">Trang chủ</a>
                 </div>
                 <div class="menu-header__item">
-                    <a href="">Phim lẻ</a>
+                    <a href="./detailMovie-page.html" data-type="totalPage-featureFlim" data-api="https://phimapi.com/v1/api/danh-sach/phim-le">Phim lẻ</a>
                 </div>
                 <div class="menu-header__item">
-                    <a href="">Phim bộ</a>
-                </div>
-                <div class="menu-header__item">
-                    <a href="">Hoạt hình</a>
-                </div>
-                <div class="menu-header__item">
-                    <a href="">Tv Shows</a>
+                    <a href="./detailMovie-page.html" data-type="totalPage-televisionSeries" data-api="https://phimapi.com/v1/api/danh-sach/phim-bo">Phim bộ</a>
                 </div>
             </div>
             <div class="search">
@@ -42,7 +37,7 @@
         </header>
     </div>
 
-    <div class="content">
+    <div class="content watch">
         <div class="detail-movie">
             <h3 class="name-movie"></h3>
             <div class="view-iframe">
@@ -52,6 +47,6 @@
         </div>
     </div>
 
-    <script defer src="./src/js/watchMovie.js"></script>
+    <script defer type="module" src="./src/js/watchMovie.js"></script>
 </body>
 </html>
