--- a/detailMovie-page.html
+++ b/detailMovie-page.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./assets/img/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/index.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/icon/fontawesome.com/releases/v6.4.2/css/all.css">
@@ -252,14 +253,64 @@
                 </button>
             </div>
         </header>
-
         <div class="content">
-            <section class="all-movie">
-
-            </section>
-
+            <section class="all-movie"></section>
             <div class="paginations"></div>
         </div>
+        <footer>
+            <div class="footer-item">
+                <h3 class="footer-title">Giới thiệu</h3>
+                <p class="footer-content">PHOFLIX là một nền tảng giải trí trực tuyến hấp dẫn, mang đến cho người dùng trải nghiệm xem phim mượt mà và thú vị mà không bị gián đoạn bởi các quảng cáo phiền phức. Với bộ sưu tập phong phú của các bộ phim từ nhiều thể loại khác nhau, từ phim hành động, hài hước, tâm lý đến kinh dị, khoa học viễn tưởng, người dùng có thể dễ dàng tìm thấy những bộ phim yêu thích của mình mà không cần phải lo lắng về quảng cáo làm phiền.</p>  
+            </div>
+            <div class="footer-item">
+                <h3 class="footer-title">Liên hệ</h3>
+                <div class="footer-contact">
+                    <div class="contact-item">
+                        <a href="tel:0789648381">
+                            <i class="fa-light fa-phone-volume"></i>
+                            <span class="contact-content">0789648381</span>
+                        </a>
+                    </div>
+                    <div class="contact-item">
+                        <a target="_blank" href="https://www.facebook.com/PHODEV.2004/">
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <span class="contact-content">Theo dõi tôi qua Facebook</span>
+                        </a>
+                    </div>
+                    <div class="contact-item">
+                        <a target="_blank" href="https://www.instagram.com/phodziet.04/">
+                            <i class="fa-brands fa-instagram"></i>
+                            <span class="contact-content">Theo dõi tôi qua Instagram</span>
+                        </a>
+                    </div>
+                    <div class="contact-item">
+                        <a target="_blank" href="https://github.com/phohoccode/">
+                            <i class="fa-brands fa-square-github"></i>
+                            <span class="contact-content">Theo dõi tôi qua Github</span>
+                        </a>
+                    </div>
+                    <div class="contact-item">
+                        <a target="_blank" href="https://www.tiktok.com/@phohoccode.04/">
+                            <i class="fa-brands fa-tiktok"></i>
+                            <span class="contact-content">Theo dõi tôi qua Tiktok</span>
+                        </a>    
+                    </div> 
+                </div>
+            </div>
+            <div class="footer-item">
+                <h3 class="footer-title">Phản hồi</h3>
+                <form action="">
+                    <div class="form-input">
+                        <label>
+                            <i class="fa-light fa-message-lines"></i>
+                            Lời nhắn
+                        </label>
+                        <textarea placeholder="Hãy phản hồi một cách tích cực nhé!"></textarea>
+                    </div>
+                    <button class="send-mail">Gửi</button>
+                </form>
+            </div>
+        </footer>
     </div>
 
     <script type="module" src="./src/js/detailMovie.js"></script>
