update ui , add and delete movies in the saved movies list

--- a/componentHTML/footer.html
+++ b/componentHTML/footer.html
@@ -1,6 +1,7 @@
 <div class="footer-item">
     <h3 class="footer-title">Giới thiệu</h3>
-    <p class="footer-content">PHOFLIX là một nền tảng giải trí trực tuyến hấp dẫn, mang đến cho người dùng trải nghiệm xem phim mượt mà và thú vị mà không bị gián đoạn bởi các quảng cáo phiền phức. Với bộ sưu tập phong phú của các bộ phim từ nhiều thể loại khác nhau, từ phim hành động, hài hước, tâm lý đến kinh dị, khoa học viễn tưởng, người dùng có thể dễ dàng tìm thấy những bộ phim yêu thích của mình mà không cần phải lo lắng về quảng cáo làm phiền.</p>  
+    <p class="footer-content">
+        PHOFLIX - Được thực hiện bởi Nhan Quốc Việt, sinh viên đang theo học Công nghệ thông tin tại trường Đại học Sư phạm Kỹ thuật Vĩnh Long. Trang web đem đến trải nghiệm xem phim mượt mà, không quảng cáo làm phiền. Tận hưởng bộ sưu tập phong phú từ mọi thể loại, không giới hạn, không gò bó. Chỉ cần tập trung vào việc thưởng thức và khám phá, PHOFLIX sẽ lo phần còn lại.</p>  
 </div>
 <div class="footer-item">
     <h3 class="footer-title">Liên hệ</h3>
@@ -42,7 +43,7 @@
     <form action="">
         <div class="form-input">
             <label>
-                <i class="fa-light fa-message-lines"></i>
+               <i class="fa-light fa-message-lines"></i>
                 Lời nhắn
             </label>
             <textarea placeholder="Hãy phản hồi một cách tích cực nhé!"></textarea>
