--- a/componentHTML/header.html
+++ b/componentHTML/header.html
@@ -18,6 +18,9 @@
         <a class="change-page" data-api="https://phimapi.com/v1/api/danh-sach/phim-bo">Phim bộ</a>
     </div>
     <div class="menu-header__item">
+        <a href="./listMoviesToWatchLater.html">Phim đã lưu</a>
+    </div>
+    <div class="menu-header__item">
         <a>Thể loại
             <i class="fa-regular fa-chevron-down"></i>
         </a>
@@ -232,8 +235,7 @@
             </li>
         </ul>
         
-    </div>
-    
+    </div>    
 </div>
 <div class="search">
     <input type="text" placeholder="Tìm kiếm...">
