--- a/listMoviesToWatchLater.html
+++ b/listMoviesToWatchLater.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PHOFLIX</title>
+    <title>Danh sách phim đã lưu</title>
     <link rel="icon" href="./assets/img/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
@@ -16,23 +16,11 @@
     <div class="main-page">
         <header></header>
         <div class="content">
-            <div class="slider-container">
-                <button class="prev">
-                    <i class="fa-light fa-angle-left"></i>
-                </button>
-                <div class="slider-inner"></div>
-                <button class="next">
-                    <i class="fa-light fa-angle-right"></i>
-                </button>
-            </div>
-            
-            <section class="feature-film"></section>
-            <section class="television-seris"></section>
-            <section class="cartoon"></section>
-            <section class="tv-shows"></section>
+            <section class="listMoviesToWatchLater"></section>
         </div>
         <footer></footer>
     </div>
-    <script defer type="module" src="./src/js/index.js"></script>
+
+    <script type="module" src="./src/js/listMoviesToWatchLater.js"></script>
 </body>
 </html>
