cập nhật hệ thống

--- a/detailMovie-page.html
+++ b/detailMovie-page.html
@@ -23,6 +23,6 @@
         <footer></footer>
     </div>
 
-    <script type="module" src="./src/js/detailMovie.js"></script>
+    <script defer type="module" src="./src/view/detailMovie.js"></script>
 </body>
 </html>
