--- a/listMoviesToWatchLater.html
+++ b/listMoviesToWatchLater.html
@@ -21,6 +21,6 @@
         <footer></footer>
     </div>
 
-    <script type="module" src="./src/js/listMoviesToWatchLater.js"></script>
+    <script defer type="module" src="./src/view/listMoviesToWatchLater.js"></script>
 </body>
 </html>
