--- a/search-page.html
+++ b/search-page.html
@@ -25,6 +25,6 @@
         <footer></footer>
     </div>
 
-    <script type="module" src="./src/js/searchMovie.js"></script>
+    <script defer type="module" src="./src/view/searchMovie.js"></script>
 </body>
 </html>
