--- a/watchMovie-page.html
+++ b/watchMovie-page.html
@@ -27,6 +27,6 @@
         <footer></footer>
     </div>
 
-    <script defer type="module" src="./src/js/watchMovie.js"></script>
+    <script defer type="module" src="./src/view/watchMovie.js"></script>
 </body>
 </html>
