--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         </div>
         <footer></footer>
     </div>
-    <script defer type="module" src="./src/js/index.js"></script>
+    <script defer type="module" src="./src/view/index.js"></script>
 </body>
 </html>
