--- a/infoMovie-page.html
+++ b/infoMovie-page.html
@@ -21,6 +21,6 @@
         </div>
         <footer></footer>
     </div>
-    <script defer type="module" src="./src/js/infoMovie.js"></script>
+    <script defer type="module" src="./src/view/infoMovie.js"></script>
 </body>
 </html>
