cập nhật giao diện, thêm chức năng nhớ tập phim đã xem

--- a/watchMovie-page.html
+++ b/watchMovie-page.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/watchMovie.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/toastMessage.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/icon/fontawesome.com/releases/v6.4.2/css/all.css">
 </head>
@@ -16,13 +17,7 @@
     <div class="main-page">
         <header></header>
         <div class="content">
-            <div class="detail-movie">
-                <h3 class="name-movie"></h3>
-                <div class="view-iframe">
-                    <iframe src="" frameborder="0" class="video" allow="fullscreen"></iframe>
-                </div>
-                <div class="episode-list"></div>
-            </div>
+            <div class="detail-movie"></div>
         </div>
         <footer></footer>
     </div>
